--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Greeting from Mona
+name: WorkFlow From Eiwen
 on: push
 
 jobs:
   my-job:
     name: My Job
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - name: Print a greeting
       env:
