for action test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,11 @@
-name: WorkFlow From Eiwen
+name: 阿飞的workflow
 on: push
 
 jobs:
   my-job:
-    name: My Job
+    name: 测试任务
     runs-on: windows-latest
     steps:
-    - name: Print a greeting
-      env:
-        MY_VAR: Hi there! My name is
-        FIRST_NAME: Mona
-        MIDDLE_NAME: The
-        LAST_NAME: Eiwen
+    - name: 打印文本
       run: |
-        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
+        echo 我的名字是阿飞
