--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ jobs:
       - name: 打印文本
         run: |
           echo 我的名字是阿飞
-
       - name: 安装依赖
         run: |
           npm i nodemon -g
@@ -17,3 +16,6 @@ jobs:
         run: |
           md test2
           dir
+      - name: Deploy Saber Website to GitHub Pages
+        uses: saberland/deploy-gh-pages@v0.1.1
+          
